# sockets-in-linux

./: CMakeLists.txt  README.md
include/: TCPClient.h  TCPServer.h  TCPServerMultipleClient.h  UDPClientServer.h  concurrent_queue.h  network_socket.h  poller.h  tcp_client.h  tcp_listener.h
notes/: addresses
samples/: demo_TCPClient.cpp  demo_TCPClientPoller.cpp  demo_TCPServer.cpp  demo_TCPServerMultipleClient.cpp  demo_TcpServerPoller.cpp  demo_UDPClient.cpp  demo_UDPClientPoller.cpp  demo_UDPServer.cpp  demo_UDPServerPoller.cpp  demo_client.cpp  demo_server.cpp  serevrMultipleClients_demo.cpp
src/: TCPClient.cpp  TCPServer.cpp  TCPServerMultipleClient.cpp  UDPClientServer.cpp  network_socket.cpp  poller.cpp  tcp_client.cpp  tcp_listener.cpp
